k8s-manifests.yaml
---
# Source: openanonymiser/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openanonymiser-allow-namespaces
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: presidio
        - namespaceSelector:
            matchLabels:
              name: default
---
# Source: openanonymiser/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openanonymiser
  labels:
    app: openanonymiser
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: openanonymiser
---
# Source: openanonymiser/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openanonymiser
  labels:
    app: openanonymiser
    chart: openanonymiser-0.1.0
    release: release-name
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openanonymiser
  template:
    metadata:
      labels:
        app: openanonymiser
      annotations:
        {}
    spec:
      serviceAccountName: openanonymiser
      securityContext:
        {}
      containers:
        - name: openanonymiser
          image: "mwest2020/openanonymiser:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1500m
              memory: 8Gi
            requests:
              cpu: 500m
              memory: 4Gi
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
---
# Source: openanonymiser/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openanonymiser
  annotations:
    {}
spec:
  ingressClassName: nginx
  rules:
    - host: api.openanonymiser.commonground.nu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openanonymiser
                port:
                  number: 8080
  tls:
    []
